--- a/index.html
+++ b/index.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinite Scroll</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
-    <!-- loader -->
+    <!-- Loader -->
     <div class="loader" id="loader" hidden>
-        <img src="loader.svg" alt="Loading...">
+        <img src="loader.svg" alt="Loading">
     </div>
     <!-- Image Container -->
-    <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1610800563169-b1a9f736f9cd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1610800563169-b1a9f736f9cd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1610800563169-b1a9f736f9cd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="">
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
-    <script src="js/app.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
