--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Title -->
-    <h1>Unsplash API - Infinite Scroll</h1>
+    <h1> Infinite Scroll Made with ❤ by <span class="dev"><a href="https://www.facebook.com/HashTagNahid" target="_blank">Nahid</a></span> </h1>
     <!-- Loader -->
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="Loading">
